feat: db connection has been implemented

--- a/rust-blog-api/Cargo.toml
+++ b/rust-blog-api/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15.0"
 rocket = "=0.5.0-rc.3"
+sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
+uuid = { version = "1.4.1", features = ["serde", "v4"] }
