--- a/rust-blog-api/.gitignore
+++ b/rust-blog-api/.gitignore
@@ -1,6 +1,7 @@
 # Generated files
 target/
 
+.env
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
 Cargo.lock
