--- a/rust-blog-api/Cargo.toml
+++ b/rust-blog-api/Cargo.toml
@@ -11,6 +11,8 @@ dotenv = "0.15.0"
 rocket = {version= "0.5.0-rc.3", features=["json"]}
 serde = { version = "1.0.186", features = ["derive"] }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
+argon2 = { version = "0.4", features = ["std"] }
+anyhow = "1.0"
 
 [dependencies.sqlx]
 version =  "0.7.1"
