--- a/rust-blog-api/Cargo.toml
+++ b/rust-blog-api/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+jsonwebtoken = "=8"
 chrono = { version = "0.4.26", features = ["serde"] }
 dotenv = "0.15.0"
 rocket = {version= "0.5.0-rc.3", features=["json"]}
